--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -3,21 +3,23 @@
 <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='markdown.css') }}" />
 
-<h1>Editar Publicación</h1>
+<div class="container">
+  <h1>Editar Publicación</h1>
 
-<form method="post" class="form">
-  <label>Título </label>
-  <input type="text" name="title" value="{{ post.title }}" required />
+  <form method="post" class="form">
+    <label>Título </label>
+    <input type="text" name="title" value="{{ post.title }}" required />
 
-  <label>Contenido </label>
-  <textarea id="markdown-editor" name="content" required>{{ post.content }}</textarea>
+    <label>Contenido </label>
+    <textarea id="markdown-editor" name="content" required>{{ post.content }}</textarea>
 
-   <div class="actions">
-    <button type="submit">Guardar</button>
-    <a href="{{ url_for('post.post_detail', post_id=post.id) }}" class="btn-red">Cancelar</a>
-  </div>
+    <div class="actions">
+      <button type="submit">Guardar</button>
+      <a href="{{ url_for('post.post_detail', post_id=post.id) }}" class="btn-red">Cancelar</a>
+    </div>
 
-</form>
+  </form>
+</div>
 
 <script>
   const easyMDE = new EasyMDE({
