fix: no cambiar fuente en etiquetas before after para no dañar los botones del editor markdown fix: error al cerrar clase en css

--- a/static/markdown.css
+++ b/static/markdown.css
@@ -65,6 +65,7 @@
 }
 
 .markdown-body code {
+  font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
   background-color: #f6f8fa;
   color: #24292e;
   padding: 0.2em 0.4em;
