--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -36,7 +36,7 @@
   </div>
   {% endif %}
 
-  <div class="body markdown-body">{{ markdown_content | safe }}</div>
+  <div class="markdown-body">{{ markdown_content | safe }}</div>
   </article>
 
   <section class="comments">
